Add new files and main section to HTML

--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
 <body>
     <header>
         <h1>Discover hidden places in the world around you</h1>
-        <nav>
             <a href="">Download Excursion (Coming soon!)</a>
-        </nav>
     </header>
+
+    <main>
+        <section>
+            <video src="./resources/videos/excursion.mp4" autoplay loop></video>
+            <h2>Your personal travel guide</h2>
+            <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+            <p><img src="./resources/images/camp.webp"></p>
+            <p><img src="./resources/images/phone.webp"></p>
+            <h2>Coming Soon for iPhone and Android</h2>
+            <a href="">Download Excursion (Coming soon!)</a>
+        </section>
+    </main>
 </body>
 </html>
