--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
             <a href="">Download Excursion (Coming soon!)</a>
         </section>
     </main>
+
+    <footer>
+        <p>© Excursion</p>
+    </footer>
 </body>
 </html>
