--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <section>
-            <video src="./resources/videos/excursion.mp4" autoplay loop></video>
+            <video src="./resources/videos/excursion.mp4" autoplay loop muted>Video not found</video>
             <h2>Your personal travel guide</h2>
             <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
             <p><img src="./resources/images/camp.webp"></p>
